style/home_style.css
body {
	background-color: white;
	margin: 0;
    padding: 0;
}

#parallax {
	background-image: url('../pictures/contrailhq.png');
    height: 100%;
    background-attachment: fixed;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    opacity: 0.8;
    position:relative;
}


.header {
	position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 50%;
    height: 30%;
    margin: auto;
    text-align: center;
}



.link {
	margin-top:-1vh;
}

#links {
	position:relative;
	text-align: center;
	margin: auto;
	height: 10vh;
	width: 60vh;
	


}

.icon {
	position:relative;
	margin-top: -1vh;
	right: 0;
	left: 0;

}

#logopic {
	margin-left:15px;
   	margin-right:15px
}


#name {
	position:relative;
	font-family: 'Comfortaa', cursive;
	/*font-family: 'Raleway', sans-serif;*/
	color: #1B9CFC;
	font-size: 70px;

	padding-top:35vh;
	min-width: 700px;
	text-align:center;
}

#description {
	color: #1B9CFC;
	position:relative;
	font-size: 30px;
	font-weight: normal;
	font-family: 'Comfortaa', cursive;


	
	min-width: 700px;
	margin-top:-5vh;
	text-align:center;

}


#facebook{
	position:absolute;
	top: -20px;
	right: 180px;
	
}
#github{
	position:absolute;
	top: -20px;
	right: 90px;
}
#linkedin{
	position:absolute;
	top: -20px;
	right: 0;
}
#flickr{
	position:absolute;
	top: -20px;
	right: -90px;
}
#dreamstale{
	position:absolute;
	top: -20px;
	right: -180px;
}
#youtube{
	position:absolute;
	top: -20px;
	right: -270px;
}

.about {
	position:relative;
	text-align: center;
	font-family: 'Comfortaa', cursive;
	font-size: 40px;
	margin-top:2vh;
}

#text {
	text-align: left;
	margin-right: 500px;
	margin-left: 500px;

	font-family: 'Raleway', sans-serif;
	font-size: 20px;
	min-width: 700px;
	
}

.tooltip {
    display: inline-block;
    position: relative;
}
.tooltip:after {
    content: attr(title);

    opacity: 0;
    width: 120px;

    color: black;
    text-align: center;

    font-family: 'Comfortaa', cursive;
    

    position: absolute;
    z-index: 1;
    font-size: 20px;
    top: 100%;
    left: 50%;
    margin-left: -60px;
    -webkit-transition: opacity 2s ease-in-out;
    transition: opacity 0.75s ease-in-out;

}
.tooltip:hover:after {
    opacity: 1;
}



.animated {
	background-repeat: no-repeat;
	-webkit-animation-duration: 1.5s;
	animation-duration: 1.5s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
}

@-webkit-keyframes fadeInDown {
	0% {
		opacity: 0;
    -webkit-transform: translateY(-60px);
	}
  100% {
    opacity: 1;
    -webkit-transform: translateY(0px);
  }
}



.fadeInDown {
	-webkit-animation-name: fadeInDown;
	animation-name: fadeInDown;
}



@-webkit-keyframes fadeInUp {
	0% {
		opacity: 0;
    -webkit-transform: translateY(60px);
	}
  100% {
    opacity: 1;
    -webkit-transform: translateY(0px);
  }
}



.fadeInUp {
	-webkit-animation-name: fadeInUp;
	animation-name: fadeInUp;

}



#picture {


	height:350px;
	width:350px;

	position: relative;

	margin-top:20px;
}


.wrapper {
	position: relative;
	
	margin: 0 auto;
}

.intro {
	position:relative;


	margin-left:250px;
	margin-right:250px;

}


.nav-bar {
	list-style-type: none;
	margin: 0;
	padding: 0;
	position: absolute;
	top: 0;
	width: 100%;  

	overflow: hidden;
	opacity: 1;
	z-index:3;


}
.nav_element {
	display: inline; 
	float: left;
}

li a {
	display: block;
	font-family: 'Comfortaa', cursive;
	font-size:110%;
	color: #273c75;
	text-align: center;
	padding: 25px 26px;
	text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
	opacity:0.2;
}

